@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="kget" version="3">
+<kpartgui name="kget" version="4">
 <MenuBar>
     <Menu noMerge="1" name="file"><text>&amp;File</text>
         <Action name="new_transfer"/>
@@ -18,6 +18,7 @@
         <Action name="preferences"/>
         <Separator/>
         <Action name="show_drop_target" />
+        <Action name="auto_paste" />
     </Menu>
     <Menu name="help"><text>&amp;Help</text>
     </Menu>
